--- a/src/components/products/product/product.scss
+++ b/src/components/products/product/product.scss
@@ -1,23 +1,44 @@
 .product{
-
+  max-width: 400px;
+  width: 100%;
+  cursor: pointer;
+  margin: 3rem 0;
+  animation: move .5s ease-in-out;
   &__image{
     overflow: hidden;
+    height: 75%;
   }
   &__img{
     transform: scale(1);
+    transition: .5s;
+    object-fit: cover;
+    height: 100%;
     &:hover{
-      transform: scale(1.4);
+      transform: scale(1.2) rotate(-5deg);
     }
+
   }
   &__content{
     padding: 2rem 0;
   }
   &__title{
     font-size: 1.6rem;
-
+    font-weight: 300;
+    margin-bottom: 1rem;
   }
   &__price{
-    font-size: 1.6rem;
+    font-size: 1.8rem;
     font-weight: bold;
+  }
+}
+
+@keyframes move{
+  0%{
+    opacity: 0;
+    transform: translateY(-30%);
+  }
+  100%{
+    opacity: 1;
+    transform: translateY(0);
   }
 }
