--- a/src/components/products/products.scss
+++ b/src/components/products/products.scss
@@ -3,4 +3,11 @@
     display: flex;
     justify-content: space-between;
   }
+  &__list{
+    overflow: hidden;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 5rem;
+  }
 }
