add some style to single Product page

--- a/src/common/styles/colors.scss
+++ b/src/common/styles/colors.scss
@@ -8,6 +8,14 @@
     color: $men !important;
   }
 }
+.text {
+  &_in-women {
+    color: $men !important;
+  }
+  &_in-men {
+    color: $women !important;
+  }
+}
 
 // background color
 .bg {
