--- a/src/components/dropDawn/dropDawn.scss
+++ b/src/components/dropDawn/dropDawn.scss
@@ -1,49 +1,55 @@
-.dropdawn{
+.dropdawn {
   display: flex;
   flex-direction: column;
   width: 20rem;
   cursor: pointer;
-  
-  &__label{
+  position: relative;
+
+  &__label {
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid #313131;
     padding: 1rem 0;
-    &:hover .dropdawn__icon{
+    &:hover .dropdawn__icon {
       transform: rotate(0);
     }
   }
-  &__list{
-    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;;
+  &__list {
+    position: absolute;
+    width: 100%;
+    top: 100%;
+    user-select: none;
+    z-index: 9;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
-  &__title{
+  &__title {
     font-size: 1.8rem;
     text-transform: capitalize;
-
   }
-  &__icon{
+  &__icon {
     transform: rotate(-90deg);
     font-size: 1.8rem;
-    transition: .5s;
+    transition: 0.5s;
   }
 
-  &__item{
+  &__item {
     font-size: 1.6rem;
     text-transform: capitalize;
     border-bottom: 1px solid #313131;
     padding: 1rem;
-    transition: .5s;
+    transition: 0.5s;
     cursor: pointer;
-    &:active,&--active{
+    &:active,
+    &--active {
       background-color: #313131;
-      color:white;
+      color: white;
     }
   }
-  .men.dropdawn__item{
-    &:active,&--active{
+  .men.dropdawn__item {
+    &:active,
+    &--active {
       background-color: white;
-      color:#313131;
+      color: #313131;
     }
-
   }
 }
