--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,45 +1,47 @@
-.header{
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
   max-width: 1400px;
   margin: 0 auto;
-  padding: 3rem 0 ;
-  & > div{
+  padding: 3rem 0;
+  position: relative;
+  & > div {
     width: 33%;
   }
-  &__icons{
+  &__icons {
     display: flex;
     align-items: center;
     justify-content: flex-end;
   }
-  &__search{
+  &__search {
     font-size: 2.5rem;
-/*     color:#313131; */
+    /*     color:#313131; */
     margin-right: 4rem;
     cursor: pointer;
   }
-    &__icon{
-      font-size: 3rem;
-      position: relative;
-      margin-right: 2rem;
-      margin-left: 4rem;
-      display: block;
-      &::before{
-        content:'0';
-        position: absolute;
-        top:0;
-        right: -.5rem;
-        width: 1.5rem;
-        height: 1.5rem;
-        border-radius: 50%;
-        color:white;
-        background: #131212;
-        font-size: 1rem;
-        text-align: center;
-        line-height: 1.5rem;
-        border:1px solid white;
-      }
-
+  &__icon {
+    user-select: none;
+    cursor: pointer;
+    font-size: 3rem;
+    position: relative;
+    margin-right: 2rem;
+    margin-left: 4rem;
+    display: block;
+    &::before {
+      content: "0";
+      position: absolute;
+      top: 0;
+      right: -0.5rem;
+      width: 1.5rem;
+      height: 1.5rem;
+      border-radius: 50%;
+      color: white;
+      background: #131212;
+      font-size: 1rem;
+      text-align: center;
+      line-height: 1.5rem;
+      border: 1px solid white;
     }
   }
+}
