--- a/src/components/cart/cart.scss
+++ b/src/components/cart/cart.scss
@@ -1,25 +1,31 @@
 .cart {
   position: absolute;
-  top: 100%;
-  right: 0;
+  top: 90%;
+  right: 2rem;
   z-index: 9;
+  font-weight: 500;
   max-width: 350px !important;
   width: 100% !important;
   height: 500px;
   border-radius: 10px;
+  transition: 0.2s ease-in-out;
+  transform-origin: right top;
+  visibility: hidden;
+  opacity: 0;
+  transform: scale(0);
   overflow: hidden;
   background-color: #fff;
   color: #131212;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  border: 1px solid black;
-
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.5) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.55) 0px -2px 6px 0px inset;
   header {
     text-align: center;
     padding: 1.5rem;
     font-size: 1.5rem;
-    font-weight: 500;
     text-transform: uppercase;
   }
   div {
@@ -30,17 +36,34 @@
   footer {
     display: flex;
     justify-content: space-between;
+    font-size: 1.6rem;
+    span {
+      padding: 1.5rem 3rem;
+    }
     button {
+      cursor: pointer;
       background-color: black;
       color: white;
       font-size: 1.4rem;
-      font-weight: 500;
       text-transform: capitalize;
       border: none;
       outline: none;
       padding: 1.5rem 0;
       text-align: center;
       width: 50%;
+      text-transform: uppercase;
     }
   }
+  &__list {
+    padding: 1rem 2rem;
+    font-size: 1.4rem;
+  }
+}
+
+.cart--show {
+  transition: 0.2s ease-in-out;
+
+  visibility: visible;
+  opacity: 1;
+  transform: scale(1);
 }
