--- a/src/components/categories/listCategories/listCategories.scss
+++ b/src/components/categories/listCategories/listCategories.scss
@@ -1,25 +1,27 @@
-.listCategories{
+.listCategories {
   text-align: center;
-  min-width: 400px;
   margin-top: 10rem;
-  &__title{
-    font-size: 1.4rem;
-    font-weight:700;
-    text-transform: uppercase;
 
+  &__title {
+    font-size: 1.4rem;
+    font-weight: 700;
+    text-transform: uppercase;
   }
-  &__item a{
+  &__item a {
     display: block;
     text-transform: capitalize;
     font-size: 4rem;
     font-weight: 300;
     margin: 3rem 0;
-    &:hover{
+    @media (max-width: 800px) {
+      font-size: 3rem;
+    }
+    &:hover {
       text-shadow: 1px 1px 1px #313131;
     }
   }
-  &__item a.men{
-    &:hover{
+  &__item a.men {
+    &:hover {
       text-shadow: 1px 1px 1px white;
     }
   }
