--- a/src/components/dropDawn/dropDawn.scss
+++ b/src/components/dropDawn/dropDawn.scss
@@ -4,6 +4,7 @@
   width: 20rem;
   cursor: pointer;
   position: relative;
+  margin: 0 0.5rem;
 
   &__label {
     display: flex;
@@ -43,6 +44,9 @@
     &--active {
       background-color: #313131;
       color: white;
+    }
+    @media (max-width: 400px) {
+      font-size: 1.3rem;
     }
   }
   .men.dropdawn__item {
