--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -8,17 +8,14 @@
   position: relative;
   & > div {
     width: 33%;
+    @media (max-width: 667px) {
+      width: auto;
+    }
   }
   &__icons {
     display: flex;
     align-items: center;
     justify-content: flex-end;
-  }
-  &__search {
-    font-size: 2.5rem;
-    /*     color:#313131; */
-    margin-right: 4rem;
-    cursor: pointer;
   }
   &__icon {
     user-select: none;
@@ -42,6 +39,9 @@
       text-align: center;
       line-height: 1.5rem;
       border: 1px solid white;
+    }
+    @media (max-width: 900px) {
+      margin-left: 2rem;
     }
   }
 }
