--- a/src/components/header/switch/switch.scss
+++ b/src/components/header/switch/switch.scss
@@ -1,14 +1,14 @@
-.switch{
+.switch {
   display: flex;
   justify-content: center;
   align-items: center;
-  &__text{
+  &__text {
     font-size: 1.3rem;
     font-weight: 300;
     text-transform: capitalize;
   }
-  &__box{
-    border:1px solid white;
+  &__box {
+    border: 1px solid white;
     border-radius: 20px;
     width: 6rem;
     padding: 3px;
@@ -17,25 +17,28 @@
     position: relative;
     height: 28px;
   }
-  &__circle{
+  &__circle {
     display: block;
-    background:white;
+    background: white;
     border-radius: 50%;
     width: 20px;
     height: 20px;
     position: absolute;
     top: 3px;
-    right:3px;
+    right: 3px;
   }
-  &__circle.women{
-    left:3px;
+  &__circle.women {
+    left: 3px;
+  }
+  @media (max-width: 667px) {
+    display: none;
   }
 }
-.women .switch{
-&__box{
-  border-color: #313131;
-}
-&__circle{
-  background-color: #313131;
-}
+.women .switch {
+  &__box {
+    border-color: #313131;
+  }
+  &__circle {
+    background-color: #313131;
+  }
 }
