--- a/src/components/inner/inner.scss
+++ b/src/components/inner/inner.scss
@@ -8,10 +8,11 @@
   overflow: hidden;
   &:hover {
     width: 80%;
+    &__content {
+      transform: scale(1.2);
+    }
   }
-  &:hover &__content {
-    transform: scale(1.2);
-  }
+
   &__images {
     pointer-events: none;
     position: absolute;
@@ -57,6 +58,19 @@
   &.women &__subTitle,
   &.women &__title {
     color: #313131;
+  }
+  @media (max-width: 667px) {
+    width: 100%;
+    height: 50vh;
+    &:hover {
+      width: 100%;
+    }
+    &__images {
+      display: none;
+    }
+    &__title {
+      font-size: 5rem;
+    }
   }
 }
 .men.inner {
