--- a/src/components/products/product/product.scss
+++ b/src/components/products/product/product.scss
@@ -1,6 +1,6 @@
 .product {
-  max-width: 320px;
-  width: 100%;
+  width: calc(30% - 4rem);
+  margin: 3rem 2rem;
   cursor: pointer;
   margin: 3rem 2rem;
   animation: move 0.5s ease-in-out;
@@ -18,7 +18,7 @@
     }
   }
   &__content {
-    padding: 2rem 0;
+    padding: 2rem 1rem;
   }
   &__title {
     font-size: 1.6rem;
@@ -28,6 +28,18 @@
   &__price {
     font-size: 1.8rem;
     font-weight: bold;
+  }
+  // @media (max-width: 1200px) {
+  //   width: calc(30% - 4rem);
+  //   margin: 3rem 2rem;
+  // }
+  @media (max-width: 700px) {
+    width: calc(50% - 4rem);
+    margin: 3rem 2rem;
+  }
+  @media (max-width: 400px) {
+    width: 100%;
+    margin: 3rem 2rem;
   }
 }
 
