--- a/src/components/products/products.scss
+++ b/src/components/products/products.scss
@@ -9,5 +9,8 @@
     flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 7rem;
+    @media (max-width: 400px) {
+      justify-content: center;
+    }
   }
 }
