--- a/src/components/singleProduct/detailsProduct/detailsProduct.scss
+++ b/src/components/singleProduct/detailsProduct/detailsProduct.scss
@@ -1,7 +1,6 @@
 .details {
-  width: 50%;
+  width: 45%;
   padding: 5rem;
-
   &__title {
     font-size: 4rem;
     text-transform: uppercase;
@@ -26,5 +25,8 @@
     &:hover {
       transform: scale(1.03);
     }
+  }
+  @media (min-width: 1020px) {
+    padding: 5rem 5rem 5rem 10rem;
   }
 }
