--- a/src/components/singleProduct/slider/slider.scss
+++ b/src/components/singleProduct/slider/slider.scss
@@ -5,17 +5,31 @@
     padding: 2rem;
     position: relative;
     height: 100%;
-    img {
-      position: absolute;
-      left: 50%;
-      top: 0;
-      transform: translateX(-50%);
-      max-width: 340px;
+  }
+  &__img{
+    position: absolute;
+    left: -200%;
+    top: 0;
+    transform: translate(-50%,10%);
+    max-width: 340px;
+    width: 100%;
+    height: 80%;
+    opacity: 0;
+    transition: .5s ease-in-out;
+    border: 1px solid transparent;
+
+    img{
       width: 100%;
       height: 100%;
       object-fit: cover;
     }
   }
+  &__img--active{
+    left:50%;
+    opacity: 1;
+    transition: .5s ease-in-out;
+  }
+
   &__arrows {
     position: absolute;
     top: 50%;
@@ -37,4 +51,6 @@
     font-size: 3rem;
     cursor: pointer;
   }
+
 }
+
